# wasm-pong

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.dev.yml  docker-compose.yml  init-kafka.sh  k8s-deployment.yml  k8s.yml  run-server.dev.sh  run-server.sh
.github/workflows/: rust.yml
client/: .dockerignore  Cargo.toml  Dockerfile  LICENSE_MIT
client/nginx/: default.conf  nginx.conf
client/svelte-client/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
client/wasm/: .dockerignore  Cargo.toml
client/www/: .dockerignore  index.html  (+4 more)
dev-ops/: docker-compose.yml
nginx/: Dockerfile
pong/: .gitignore  Cargo.toml
pong/src/: collision.rs  event.rs  game_field.rs  game_object.rs  geom.rs  lib.rs  pong.rs  utils.rs
pong/tests/: bounding_box_tests.rs  collision_handler_test.rs  collision_tests.rs  game_field_test.rs  game_object_tests.rs  pong_tests.rs  vector_tests.rs
server/: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  run.sh
server/kafka/: Dockerfile  custom-entrypoint.sh
server/kafka/kafka-script-proxy/: Cargo.toml
server/kafka/kafka-script-proxy/src/: main.rs
server/src/: actor.rs  event.rs  hash.rs  http.rs  kafka.rs  main.rs  player.rs  request_handler.rs  session.rs  session_manager.rs  utils.rs  websocket.rs  websocket_handler.rs
server/tests/: utils_tests.rs
src/: collision.rs  game_object.rs  geom.rs  lib.rs
tests/: bounding_box_tests.rs  collision_tests.rs  game_field_test.rs  vector_tests.rs
www/: index.html  index.js  package.json
(+55 files in other folders)
