[package]
name = "pong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.79" }
rand = "0.8.5"
async-trait = "0.1.56"
getrandom = { version = "0.2", features = ["js"] }


[dev-dependencies]
rstest = "0.12.0"
