[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kafka = { version = "0.8.0" }
hyper = {version = "0.14.18", features = ["full"]}
tokio = { version = "1", features = ["full"] }
tokio-stream = {version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.79" }
md5 = { version = "0.7.0" }
pong = { path = "../pong", version = "0.1.0" }
hyper-tungstenite = "0.8.0"
futures = { version = "0.3.12" }
async-trait = "0.1.56"
uuid = { version = "1.1.2", features = ["v4"] }

[dev-dependencies]
rstest = "0.12.0"
